--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -6,6 +6,7 @@
   "types": "./src/index.ts",
   "license": "MIT",
   "dependencies": {
+    "@gluestack-style/react": "^0.1.33",
     "nativewind": "^2.0.11",
     "twrnc": "3.6.3"
   },
